--- a/publish.html
+++ b/publish.html
@@ -155,9 +155,6 @@
 <div class="publish-top">
   <!-- container -->
   <div class="container">
-    <!--    <div class="map">-->
-    <!--      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d158858.18237072596!2d-0.10159865000003898!3d51.52864165000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1436514341845" allowfullscreen></iframe>-->
-    <!--    </div>-->
     <div class="publishContent">
       <div class="">
         <div class="form-group has-success  ">
@@ -269,6 +266,9 @@
         </select>
         <div class="clearfix"></div>
       </div>
+
+      <a href="#" class="hvr-glow">发布救助</a>
+
     </div>
     <!-- //container -->
   </div>
