--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <ul class="rslides callbacks callbacks1" id="slider4">
             <li>
               <div class="agileits-banner-info">
-                <img src="images/b1.jpg" height="" width="100%"/>
+                <img src="https://img.gzzhitu.com/zhitu-api/1555311355609.jpg" height="" width="100%"/>
                 <!--                <h3>Lorem ipsum dolor sit amet <span>Nulla massa magna</span></h3>-->
               </div>
             </li>
@@ -202,125 +202,42 @@
 <div class="welcome">
   <div class="container">
     <div class="w3ls-heading">
-      <h2>Welcome To Our Cat club</h2>
+      <h2>欢迎来到Stray Animal Base-宠物救助中心</h2>
     </div>
-    <div class="welcome-grids">
-      <div class="col-md-6 agile-welcome-grid">
-        <div class="grid">
-          <div class="col-md-6 agileits-left">
-            <figure class="effect-chico">
-              <img src="images/2.jpg" alt=""/>
-              <figcaption>
-                <h4>Proin nulla</h4>
-                <p>Chico's main fear was missing the morning bus.</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-6 agileits-left">
-            <figure class="effect-chico">
-              <img src="images/3.jpg" alt=" "/>
-              <figcaption>
-                <h4>Nam ornare</h4>
-                <p>Chico's main fear was missing the morning bus.</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-      </div>
-      <div class="col-md-6 agileinfo-welcome-right">
-        <h4>Donec posuere cursus nibh. Mauris a sollicitudin metus. Mauris porttitor, dui maximus viverra bibendum</h4>
-        <p>Nulla massa magna, luctus at justo et, euismod convallis mauris. Pellentesque habitant morbi tristique
-          senectus et netus et malesuada fames ac turpis egestas. Mauris rutrum fringilla fermentum.<span>Donec tincidunt, eros quis consectetur maximus, nibh justo pretium diam, id vehicula lacus nunc eu orci. Aliquam molestie, nibh vitae pharetra semper, nunc nisi laoreet diam, et placerat nulla quam non leo. </span>
-        </p>
-      </div>
-      <div class="clearfix"></div>
-    </div>
+    <!--    <div class="welcome-grids">-->
+    <!--      <div class="col-md-6 agile-welcome-grid">-->
+    <!--        <div class="grid">-->
+    <!--          <div class="col-md-6 agileits-left">-->
+    <!--            <figure class="effect-chico">-->
+    <!--              <img src="images/2.jpg" alt=""/>-->
+    <!--              <figcaption>-->
+    <!--                <h4>Proin nulla</h4>-->
+    <!--                <p>Chico's main fear was missing the morning bus.</p>-->
+    <!--              </figcaption>-->
+    <!--            </figure>-->
+    <!--          </div>-->
+    <!--          <div class="col-md-6 agileits-left">-->
+    <!--            <figure class="effect-chico">-->
+    <!--              <img src="images/3.jpg" alt=" "/>-->
+    <!--              <figcaption>-->
+    <!--                <h4>Nam ornare</h4>-->
+    <!--                <p>Chico's main fear was missing the morning bus.</p>-->
+    <!--              </figcaption>-->
+    <!--            </figure>-->
+    <!--          </div>-->
+    <!--          <div class="clearfix"></div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--      <div class="col-md-6 agileinfo-welcome-right">-->
+    <!--        <h4>Donec posuere cursus nibh. Mauris a sollicitudin metus. Mauris porttitor, dui maximus viverra bibendum</h4>-->
+    <!--        <p>Nulla massa magna, luctus at justo et, euismod convallis mauris. Pellentesque habitant morbi tristique-->
+    <!--          senectus et netus et malesuada fames ac turpis egestas. Mauris rutrum fringilla fermentum.<span>Donec tincidunt, eros quis consectetur maximus, nibh justo pretium diam, id vehicula lacus nunc eu orci. Aliquam molestie, nibh vitae pharetra semper, nunc nisi laoreet diam, et placerat nulla quam non leo. </span>-->
+    <!--        </p>-->
+    <!--      </div>-->
+    <!--      <div class="clearfix"></div>-->
+    <!--    </div>-->
   </div>
 </div>
-<!-- banner-bottom -->
-<!-- services -->
-<div class="services">
-  <div class="container">
-    <div class="w3ls-heading">
-      <h3>Services</h3>
-    </div>
-    <div class="wthree-services-grids">
-      <div class="col-md-6 w3ls-about-left">
-        <div class="agileits-icon-grid">
-          <div class="icon-left hvr-radial-out">
-            <i class="fa fa-cog" aria-hidden="true"></i>
-          </div>
-          <div class="icon-right">
-            <h5>Suspendisse consectetur dapibus volutpat.</h5>
-            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper,
-              nec interdum neque hendrerit.</p>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-        <div class="agileits-icon-grid">
-          <div class="icon-left hvr-radial-out">
-            <i class="fa fa-heart" aria-hidden="true"></i>
-          </div>
-          <div class="icon-right">
-            <h5>Lorem ipsum dolor sit amet</h5>
-            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper,
-              nec interdum neque hendrerit.</p>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-        <div class="agileits-icon-grid">
-          <div class="icon-left hvr-radial-out">
-            <i class="fa fa-paper-plane" aria-hidden="true"></i>
-          </div>
-          <div class="icon-right">
-            <h5>Suspendisse consectetur dapibus volutpat.</h5>
-            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper,
-              nec interdum neque hendrerit.</p>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-      </div>
-      <div class="col-md-6 w3ls-about-left">
-        <div class="agileits-icon-grid">
-          <div class="icon-left hvr-radial-out">
-            <i class="fa fa-user" aria-hidden="true"></i>
-          </div>
-          <div class="icon-right">
-            <h5>Suspendisse consectetur dapibus volutpat.</h5>
-            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper,
-              nec interdum neque hendrerit.</p>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-        <div class="agileits-icon-grid">
-          <div class="icon-left hvr-radial-out">
-            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-          </div>
-          <div class="icon-right">
-            <h5>Lorem ipsum dolor sit amet</h5>
-            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper,
-              nec interdum neque hendrerit.</p>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-        <div class="agileits-icon-grid">
-          <div class="icon-left hvr-radial-out">
-            <i class="fa fa-bell" aria-hidden="true"></i>
-          </div>
-          <div class="icon-right">
-            <h5>Suspendisse consectetur dapibus volutpat.</h5>
-            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper,
-              nec interdum neque hendrerit.</p>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-      </div>
-      <div class="clearfix"></div>
-    </div>
-  </div>
-</div>
-<!-- //services -->
 
 <!--轮播图-->
 <div class="showCarousel">
@@ -333,42 +250,56 @@
         <div class="carousel-inner">
           <ul class="row item active">
             <li class="col-xs-4">
-              <a href="index.html"><img src="http://placehold.it/200/6dc066/ffffff&text=1"
-                   srcset="http://placehold.it/200/6dc066/ffffff&text=1 1x, http://placehold.it/400/6dc066/ffffff&text=1 2x"
-                   class="img-responsive"></a>
+              <a href="index.html">
+                <img src="https://www.catchat.org/homed-cats/images/2019-Q2/willow1_caringar.jpg"
+                     class="img-responsive">
+                <p>柳</p>
+              </a>
             </li>
             <li class="col-xs-4">
-              <img src="http://placehold.it/200/6dc066/ffffff&text=2"
-                   srcset="http://placehold.it/200/6dc066/ffffff&text=2 1x, http://placehold.it/400/6dc066/ffffff&text=2 2x"
-                   class="img-responsive">
+              <a href="index.html">
+                <img src="https://www.catchat.org/homed-cats/images/2019-Q1/ebony_kirkbycats_notts.jpg"
+                     class="img-responsive">
+                <p>西罗</p>
+              </a>
             </li>
             <li class="col-xs-4">
-              <img src="http://placehold.it/200/6dc066/ffffff&text=3"
-                   srcset="http://placehold.it/200/6dc066/ffffff&text=3 1x, http://placehold.it/400/6dc066/ffffff&text=3 2x"
-                   class="img-responsive">
+              <a href="index.html">
+                <img src="https://www.catchat.org/homed-cats/images/2019-Q1/lorenzo5-stokey-1.jpg"
+                     class="img-responsive">
+                <p>蘑菇</p>
+              </a>
             </li>
           </ul>
           <ul class="row item">
             <li class="col-xs-4">
-              <img src="http://placehold.it/200/6dc066/ffffff&text=4"
-                   srcset="http://placehold.it/200/6dc066/ffffff&text=4 1x, http://placehold.it/400/6dc066/ffffff&text=4 2x"
-                   class="img-responsive">
+              <a href="index.html">
+                <img src="https://img.gzzhitu.com/zhitu-api/1555310295676.jpg"
+                     class="img-responsive">
+                <p>猫猫兔</p>
+              </a>
             </li>
             <li class="col-xs-4">
-              <img src="http://placehold.it/200/6dc066/ffffff&text=5"
-                   srcset="http://placehold.it/200/6dc066/ffffff&text=5 1x, http://placehold.it/400/6dc066/ffffff&text=5 2x"
-                   class="img-responsive">
+              <a href="index.html">
+                <img src="https://img.gzzhitu.com/zhitu-api/1555310321152.jpg"
+                     class="img-responsive">
+                <p>十六</p>
+              </a>
             </li>
             <li class="col-xs-4">
-              <img src="http://placehold.it/200/6dc066/ffffff&text=6"
-                   srcset="http://placehold.it/200/6dc066/ffffff&text=6 1x, http://placehold.it/400/6dc066/ffffff&text=6 2x"
-                   class="img-responsive">
+              <a href="index.html">
+                <img src="https://img.gzzhitu.com/zhitu-api/1555310389545.jpg"
+                     class="img-responsive">
+                <p>裕裕</p>
+              </a>
             </li>
           </ul>
         </div>
 
-        <a class="carousel-control left" href="#full" data-slide="prev">Previous</a>
-        <a class="carousel-control right" href="#full" data-slide="next">Next</a>
+        <a class="carousel-control left" href="#full" data-slide="prev"><i class="fa fa-chevron-left"
+                                                                           aria-hidden="true"></i> </a>
+        <a class="carousel-control right" href="#full" data-slide="next"><i class="fa fa-chevron-right"
+                                                                            aria-hidden="true"></i> </a>
       </div>
     </div>
   </section>
@@ -386,26 +317,27 @@
         <div class="w3-agile-news-date">
           <div class="agile-news-icon">
             <i class="fa fa-calendar" aria-hidden="true"></i>
-            <p>11月24日</p>
+            <p>3月2日</p>
           </div>
           <div class="agileits-line"></div>
           <div class="agile-news-icon">
-            <a href="#"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a>
+            <i class="fa fa-thumbs-o-up" aria-hidden="true" id="giveALike"></i>
             <p>3482</p>
           </div>
         </div>
         <div class="w3-agile-news-img">
           <a href="single.html"><img src="images/4.jpg" alt=""/></a>
-          <h4><a href="single.html">Pellentesque habitant morbi tristique senectus et netus et malesuada fames</a></h4>
+          <h4><a href="single.html">橘猫丑丑的故事</a></h4>
         </div>
         <div class="clearfix"></div>
       </div>
       <div class="col-md-6 news-right">
         <div class="news-right-grid">
-          <a href="single.html">Nunc non neque ex. Aliquam neque massa</a>
-          <h5>06th Nov,2016</h5>
-          <p>Ut rutrum convallis erat at malesuada. Donec facilisis sem nisl, ut rhoncus ex ullamcorper ornare. Ut ac
-            interdum velit. Cras nulla nibh, rutrum non venenatis sit amet, ullamcorper venenatis felis.</p>
+          <a href="single.html">橘猫丑丑</a>
+          <h5>2019年3月2日</h5>
+          <p>当时是夏天，天气很热，我路过那里遇到她，她在那附近跑来跑去的，也没看到有主人，后来我办完事回来她还在那里，我就想会不会是流浪狗狗，抱着她问了附近的保安，周围的店铺都说不知道哪里跑来的，想着那么热的天不能把她丢那里，又在公路边上很危险就抱回家了，一路很乖很温顺的。接下来都在给她找主人，到处问了，发了帖子，也没有人回复我，最后决定给她找领养，现主人对她很好很幸福，在家称王称霸。
+
+          </p>
         </div>
       </div>
       <div class="clearfix"></div>
@@ -508,3 +440,5 @@
 </html>
 <!--引入calousel的js-->
 <script src="js/carousel/carousel.js"></script>
+<!--引入index的js-->
+<script src="js/index.js"></script>
