--- a/rescue.html
+++ b/rescue.html
@@ -150,50 +150,38 @@
         <div class="left-blog">
           <div class="blog-left">
             <div class="blog-left-left">
-              <p>发布于 <a href="#">Admin</a> &nbsp;&nbsp; 2019年4月11日 &nbsp;&nbsp; <a href="#">收藏（10）</a></p>
-              <a href="single.html"><img src="images/b1.jpg" alt=""/></a>
+              <p>发布于 <a href="#">pitaya</a> &nbsp;&nbsp; 2019年4月11日 &nbsp;&nbsp; <a href="#">关注（1）</a></p>
+              <a href="single.html"><img src="https://img.gzzhitu.com/zhitu-api/1555314052262.jpg" alt=""/></a>
             </div>
             <div class="blog-left-right">
-              <a href="single.html">Phasellus ultrices tellus eget ipsum ornare molestie </a>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Sed blandit massa vel mauris sollicitudin
-                dignissim. Phasellus ultrices tellus eget ipsum ornare molestie scelerisque eros dignissim. Phasellus
-                fringilla hendrerit lectus nec vehicula. ultrices tellus eget ipsum ornare consectetur adipiscing
-                elit.Sed blandit .
-                estibulum aliquam neque nibh, sed accumsan nulla ornare sit amet.
+              <a href="single.html">广州市的狗狗doggy正在找家</a>
+              <p>流浪救助，活泼，在家不叫，不大小便，不挑食，精力充沛，喜欢和狗狗玩，和猫咪也可以相处，会听简单指令，如no，sit，go。
               </p>
             </div>
             <div class="clearfix"></div>
           </div>
           <div class="blog-left">
             <div class="blog-left-left">
-              <p>Posted By <a href="#">Admin</a> &nbsp;&nbsp; on June 2, 2015 &nbsp;&nbsp; <a href="#">Comments (10)</a>
+              <p>发布于 <a href="#">乐乐</a> &nbsp;&nbsp; 2018年12月11日 &nbsp;&nbsp; <a href="#">关注 (10)</a>
               </p>
-              <a href="single.html"><img src="images/b2.jpg" alt=""/></a>
+              <a href="single.html"><img src="https://img.gzzhitu.com/zhitu-api/1555314401635.jpg" alt=""/></a>
             </div>
             <div class="blog-left-right wow fadeInRight animated animated" data-wow-delay=".5s">
-              <a href="single.html">Phasellus ultrices tellus eget ipsum ornare molestie</a>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Sed blandit massa vel mauris sollicitudin
-                dignissim. Phasellus ultrices tellus eget ipsum ornare molestie scelerisque eros dignissim. Phasellus
-                fringilla hendrerit lectus nec vehicula. ultrices tellus eget ipsum ornare consectetur adipiscing
-                elit.Sed blandit .
-                estibulum aliquam neque nibh, sed accumsan nulla ornare sit amet.
+              <a href="single.html">广州市的丸丸正在找家</a>
+              <p>聪明乖巧，亲人粘人，与他为伴，其乐无穷。
               </p>
             </div>
             <div class="clearfix"></div>
           </div>
           <div class="blog-left">
             <div class="blog-left-left">
-              <p>Posted By <a href="#">Admin</a> &nbsp;&nbsp; on June 2, 2015 &nbsp;&nbsp; <a href="#">Comments (10)</a>
+              <p>发布于 <a href="#">蓝蓝的天空</a>  &nbsp;&nbsp; 2019年4月6日 &nbsp;&nbsp; <a href="#">关注 (25)</a>
               </p>
-              <a href="single.html"><img src="images/b3.jpg" alt=""/></a>
+              <a href="single.html"><img src="https://img.gzzhitu.com/zhitu-api/1555314535433.jpg" alt=""/></a>
             </div>
             <div class="blog-left-right">
-              <a href="single.html">Phasellus ultrices tellus eget ipsum ornare molestie</a>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Sed blandit massa vel mauris sollicitudin
-                dignissim. Phasellus ultrices tellus eget ipsum ornare molestie scelerisque eros dignissim. Phasellus
-                fringilla hendrerit lectus nec vehicula. ultrices tellus eget ipsum ornare consectetur adipiscing
-                elit.Sed blandit .
-                estibulum aliquam neque nibh, sed accumsan nulla ornare sit amet.
+              <a href="single.html">广州市的狗狗黄豆豆正在找家</a>
+              <p>狗狗19个月了，除了调皮一些，很少吵闹，目前处于笼养阶段，在笼子也不怎么炒。
               </p>
             </div>
             <div class="clearfix"></div>
@@ -305,9 +293,9 @@
   window.onload = function () {
     new Page({
       id: 'pagination',
-      pageTotal: 50, //必填,总页数
-      pageAmount: 10,  //每页多少条
-      dataTotal: 500, //总共多少条数据
+      pageTotal: 1, //必填,总页数
+      pageAmount: 5,  //每页多少条
+      dataTotal: 3, //总共多少条数据
       curPage:1, //初始页码,不填默认为1
       pageSize: 5, //分页个数,不填默认为5
       showPageTotalFlag:true, //是否显示数据统计,不填默认不显示
